# kernel-scope

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_new.md  SECURITY.md  TODO.md  file-integrity.yaml  genius-analysis.py  policy-one.yaml  policy-processes.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  rule_request.yml
config/: file-integrity.yaml  policy-one.yaml  policy-processes.yaml  prometheus.yml  protect-pods.yaml  web.config.yml
src/: genius_analysis.py
